assets/css/_schedule-page-line-diagram.scss
.m-schedule-diagram {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;

  ol {
    list-style: none;
    margin: 0;
    padding: 0;
  }
}

.m-schedule-diagram__stop {
  border: $border;
  border-bottom: 0;
  display: flex;
  padding: calc(#{$base-spacing} / 2);

  &:last-child {
    border-bottom: $border;
  }
}

.line-diagram-svg {
  position: absolute;
  stroke-linecap: round;
  stroke-linejoin: round;
  top: 0;

  &__line:not([stroke]),
  &__stop {
    stroke: currentColor;
  }

  &__stop {
    fill: $white;
    stroke-width: 0;
  }

  &__stop[data-shuttle='true'] {
    stroke: black;
    stroke-width: 1.25px;
  }

  &__merge {
    path {
      fill: none;
    }

    path:not([stroke]) {
      stroke: currentColor;
    }
  }

  &__toggle {
    rect {
      fill: currentColor;
    }
    circle {
      fill: $white;
    }
  }

  @each $line in map-keys($mbta-line-colors) {
    $fill-color: map-get($mbta-line-colors, $line);

    &.#{$line},
    &__toggle.#{$line} {
      color: $fill-color;
    }
  }
}

.m-schedule-diagram__content {
  // Take remaining horizontal space unused by visual lines/stops
  flex-grow: 1;
  width: 100%;
}

.m-schedule-diagram__stop-heading {
  align-items: baseline;
  display: flex;
  justify-content: space-between;
  margin-bottom: calc(#{$base-spacing} / 4);
}

.m-schedule-diagram__stop-link {
  @include icon-size-inline($base-spacing, .0675em);
  margin: 0;

  a {
    font-weight: bold;
  }
}

// Access, parking, commuter rail zone etc. icons
.m-schedule-diagram__features {
  .m-schedule-diagram__feature-icon {
    margin-left: calc(#{$base-spacing} / 4);
  }

  .c-icon__cr-zone {
    font-size: $base-spacing * .7;
    vertical-align: text-top;
    width: auto;
  }

  .fa-square-parking {
    font-size: $base-spacing * 1.25;
    position: relative;
    top: .08em;
  }
}

.m-schedule-diagram__stop-details {
  display: flex;
  flex-wrap: wrap;
}

// stop-details has connections and predictions

// Listing of transit connections
.m-schedule-diagram__connections {
  @include icon-size-inline($base-spacing);

  display: inline-flex;
  flex-wrap: wrap;
  gap: calc(#{$base-spacing} / 4);
  line-height: initial;

  .m-schedule-diagram__connection {
    vertical-align: middle;
  }
}

// Diversions may be shown in lieu of predictions
.m-schedule-diagram__alert {
  flex-grow: 1;
  font-weight: bold;
  text-align: right;
}

// 'View schedules' link
.m-schedule-diagram__footer {
  margin-top: calc(#{$base-spacing} / 2);
  text-align: center;

  .btn {
    padding: 0;
  }
}

// <ExpandableBlock /> adjustments
.m-schedule-diagram__expander {
  border: $border;
  border-bottom: 0;
  padding: 0;

  [tabindex='0']:focus {
    outline: none;
  }

  &-header {
    display: inline-flex;
  }

  .line-diagram-svg__toggle {
    height: 2rem;
    overflow: visible;
    position: absolute;
    z-index: 2;
  }

  .c-expandable-block__header {
    background-color: initial;
    margin-top: 0;
    padding-bottom: 0;
    padding-top: 0;
  }

  // The 'show/hide stops' toggle
  .c-expandable-block__header-text {
    align-items: center;
    display: flex;
    font-size: 1rem;

    .c-expandable-block__header-caret {
      float: none;
    }

    .stop-bubble {
      display: none;
    }
  }

  [aria-expanded='true'] {
    // hide icon when branch is expanded
    .m-schedule-diagram__collapsed-icon {
      display: none;
    }

    // adjust text when branch is expanded/closed
    .m-schedule-diagram__toggle::before {
      content: 'Hide ';
    }
  }

  [aria-expanded='false'] .m-schedule-diagram__toggle::before {
    content: 'Show ';
  }

  // Contains the expanded branch list of stops
  .c-expandable-block__panel {
    border: 0;
    padding: 0;

    .m-schedule-diagram__stop {
      border-left: 0;
      border-right: 0;
    }
  }
}

// the 'show/hide n stops' button
.m-schedule-diagram__toggle {
  font-weight: bold;
  padding: calc(#{$base-spacing} / 2);
}

// Live departure predictions
.m-schedule-diagram__predictions {
  flex-grow: 1;

  .m-schedule-diagram__prediction,
  .m-schedule-diagram__cr-prediction {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
  }

  .m-schedule-diagram__prediction-time,
  .m-schedule-diagram__cr-prediction-time {
    font-variant-numeric: tabular-nums;
    font-weight: bold;
  }

  .m-schedule-diagram__prediction-time {
    margin-left: .5rem;
    white-space: nowrap;
  }

  .m-schedule-diagram__cr-prediction-time--delayed {
    font-weight: normal;
    margin-right: calc(#{$base-spacing} / 2);
    text-align: right;
    text-decoration: line-through;
  }

  .m-schedule-diagram__cr-prediction-details {
    font-size: $font-size-sm;
    text-align: right;

    @include media-breakpoint-down(sm) {
      display: flex;
      flex-wrap: wrap;
    }

    // Disallow line breaks in the middle of each prediction detail item
    span {
      white-space: nowrap;
    }
  }
}

.m-schedule-diagram__prediction-crowding {
  @include icon-size-inline(1.125em, .15em);
  display: inline-block;
  margin-left: .25rem;

  .u-no-crowding-data & {
    display: none;
  }
}

// live vehicle located along line diagram
.m-schedule-diagram__vehicle {
  $icon-size: 1.125rem;
  position: absolute;
  transform: scale(1, -1); // point down
  z-index: 3;

  &-tooltip {
    text-align: left;
  }

  &--icon {
    display: block;
    height: $icon-size;
    width: $icon-size;
  }
}

// stop filter
.m-schedule-diagram__filter {
  margin-bottom: $base-spacing;
  margin-top: 1rem;

  &:focus-within {
    border-color: $brand-primary-light;
  }
}

.m-schedule-diagram--searched {
  .m-schedule-diagram__lines {
    display: none;
  }
}

